# metro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  Dockerfile  LICENSE  Makefile  README.md  builder.py  line_count.sh  metro  metro-debug-noalert  out.txt  setup.py  test.txt
checker/: __main__.py  colors.py  line_counter.py
include/: AST.h  ASTWalker.h  ASTfwd.h  Application.h  BuiltinFunc.h  Checker.h  Compiler.h  Debug.h  Error.h  Evaluator.h  GC.h  Lexer.h  Object.h  Parser.h  ScriptFileContext.h  Sema.h  Token.h  TypeInfo.h  Utils.h  color.h  common.h  metro.h
include/AST/: AST.h  Base.h  Enum.h  Expr.h  Function.h  Impl.h  Kind.h  Stmt.h  Struct.h  Type.h  TypeConstructor.h  Typeable.h
include/Object/: Object.h  mt_string.h
include/debug/: alert.h
metrolang/: __init__.py
samples/: fibonacci.metro  impl.metro  struct.metro
src/: Application.cc  BuiltinFunc.cc  BuiltinFunc.cpp  Color.cc  Debug.cc  Debug.cpp  Error.cc  Error.cpp  Evaluator.cc  Evaluator.cpp  Lexer.cc  Lexer.cpp  ScriptFileContext.cc  ScriptFileContext.cpp  Sema.cc  Utils.cc  ast.cc  builtinfunc.cc  checker.cc  error.cc  eval.cc  lcc.h  lexer.cc  main.cc  main.cpp  metro.h  parser.cc  typeCheck.cc  types.cc
src/AST/: AST.cc  AST.cpp  ASTExpr.cc  ASTStmt.cc  ASTWalker.cc  ASTWalker.cpp  AST_to_string.cc  AST_to_string.cpp
src/Checker/: Checker.cc  checker.cc
src/Compiler/: Compiler.cc
src/Error/: Error.cc  emitter.cc
src/Evaluator/: EvalTools.cc  (+3 more)
srctools/: __main__.py  duplicate_checker.py  str_replace.py  tools.py
test/: fibonacchi.metro  struct.metro
(+28 files in other folders)
